fix padding issue on mobile device

--- a/frontend/src/Public.styles.less
+++ b/frontend/src/Public.styles.less
@@ -14,3 +14,8 @@
   margin-left: 0.5em;
   cursor: pointer;
 }
+
+.public-container {
+  background-size: cover;
+  padding: 10vh 0;
+}
